--- a/homehero.html
+++ b/homehero.html
@@ -181,10 +181,10 @@
 <body>
 
     <!-- HERO BACKGROUND LAYER -->
-    <div id="hero-bg"></div>
+    <div id="9378.png"></div>
 
     <!-- HERO CHARACTER LAYER -->
-    <img id="hero-character" src="assets/images/herocharacter.png" alt="EPÒK Hero">
+    <img id="herocharacter.png" src="assets/images/herocharacter.png" alt="EPÒK Hero">
 
     <!-- INTRO CREST IN CENTER -->
     <img id="intro-crest" src="assets/images/crest1.png" alt="EPÒK Crest">
