--- a/homehero.html
+++ b/homehero.html
@@ -158,7 +158,7 @@
 <body>
 
     <!-- HERO BACKGROUND -->
-    <div id="hero-bg"></div>
+    <div id="hero-bg"></div>src="assets/images/c9378.png" />
 
     <!-- HERO CHARACTER -->
     <img id="hero-character" src="assets/images/herocharacter.png" />
