--- a/homehero.html
+++ b/homehero.html
@@ -20,7 +20,7 @@
             font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
         }
 
-        /* ===== HERO BACKGROUND (9378.png) ===== */
+        /* ===== HERO BACKGROUND (src="assets/images/9378.png) ===== */
         #hero-bg {
             position: fixed;
             inset: 0;
@@ -33,7 +33,7 @@
             z-index: 0;
         }
 
-        /* ===== HERO CHARACTER (herocharacter.png) ===== */
+        /* ===== HERO CHARACTER (src="assets/images/herocharacter.png) ===== */
         #hero-character {
             position: fixed;
             top: 50%;
@@ -158,7 +158,7 @@
 <body>
 
     <!-- HERO BACKGROUND -->
-    <div id="hero-bg"></div>src="assets/images/c9378.png" />
+    <div id="hero-bg" src="assets/images/c9378.png" />
 
     <!-- HERO CHARACTER -->
     <img id="hero-character" src="assets/images/herocharacter.png" />
