--- a/homehero.html
+++ b/homehero.html
@@ -158,10 +158,10 @@
 <body>
 
     <!-- HERO BACKGROUND -->
-    <div id="hero-bg" src="assets/images/c9378.png" />
+  <div id="hero-bg"></div>
 
     <!-- HERO CHARACTER -->
-    <img id="hero-character" src="assets/images/herocharacter.png" />
+   <img id="hero-character" src="assets/images/herocharacter.png" />
 
     <!-- CENTER CREST -->
     <img id="intro-crest" src="assets/images/crest1.png" />
