--- a/homehero.html
+++ b/homehero.html
@@ -161,17 +161,17 @@
   <div id="hero-bg"></div>
 
     <!-- HERO CHARACTER -->
-   <img id="hero-character" src="assets/images/herocharacter.png" />
+   <img id="hero-character" src="epok/assets/images/herocharacter.png" />
 
     <!-- CENTER CREST -->
-    <img id="intro-crest" src="assets/images/crest1.png" />
+    <img id="intro-crest" src="epok/assets/images/crest1.png" />
 
     <!-- CLICK HERE -->
     <div id="click-here">CLICK HERE</div>
 
     <!-- ENTER BUTTON -->
     <div id="enter-wrap">
-        <img id="enter-button" src="assets/images/8187.png" />
+        <img id="enter-button" src="epok/assets/images/8187.png" />
         <div id="enter-label">ENTER</div>
     </div>
 
